- clang now allows -fplugin=plugin.so instead of -Xclang -load 
  - this makes it easier to load plugins via YouCompleteMe since I dont
    need to disable the Xclang filter and the plugin is automaticaly executed
    after the main TU is done.
- development is now done inside the container environment 
 - load incubus/opt-development
 - was needed since clang is moving to fast


== Version 0.03 == 
- due to ISC2016 just some minor changes 
- codegen
 - reduction codegen works for  
  - cilk 
  - tbb
  - hpx needs some other approach


== Version 0.02 == 
- interface plugin
 - it analyzes the outermost loops now ( before all levels )
- codegen
 - tested isls codegen based on a schedule and a set of parameters 
- dependency analysis 
 - basic kill statement analysis for 1d loops implemented
 - problems with: 
  - 2d loops
  - separation of declaration and usage
  - wrong fuse of scopes ( region between braces )
- container ( docker )
 - updated user interface to make it possible to:
  - change the unparser ( cilk, hpx, tbb, openmp, openacc ) by pressing F1, F2, ...
  - apply a fixit by pressing F7

== Version 0.01 == 

- codegen
  - can emit files to include 
  - files are not included twice
- plugin
 - has a basic help printout
 - major refacroring has improved modularity
 - information about statements is now passed via isl_ids user data pointer
- dependency analysis
 - is no based on pollys dependency analysis and supports reductions
 - plutos analysis is still available
- pet
 - can now analyse for different reduction types ( + , * ... )
 - understands auto type 
- containers ( docker )
 - full upload of all containers to dockerhub scheduled every 2 days
 - build works without python3 


== Version 0.00 ==

- in contrast to older approaches the new plugin uses
 - pet as a polyhedral scanner
 - pluto as an optimizer
 - customized unparsing code in pluto for generating
    - hpx
    - cilk 
    - openmp
    - openacc
    - tbb